# red-agent

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  agents_config.yaml  pyproject.toml  pyrightconfig.json
docs/: view.aux  view.fdb_latexmk  view.fls  view.out  view.tex
docs/model_selection/: llm_selection.tex  references.bib
logs/: complete_evaluation.csv  evaluation.csv  transcript.txt  transcript_1.txt  transcript_10.txt  transcript_2.txt  transcript_3.txt  transcript_4.txt  transcript_5.txt  transcript_6.txt  transcript_7.txt  transcript_8.txt  transcript_9.txt
red_agent/: __init__.py  hello.py
red_agent/agents/: base.py  referee.py
red_agent/analysis/: analysis.ipynb
red_agent/arena/: langgraph_arena.py  run_arena.py
red_agent/data/: topics.py  topics.yaml
red_agent/prompts/: debate_prompt.jinja  evaluation_output_template.jinja  prompts.jinja  referee_csv_prompt.txt  referee_prompt.txt
red_agent/tests/: simple_llm_test.py  test_referee.py
red_agent/utils/: aggregate.py  config.py
tests/: test_dummy.py
